@@ -5,7 +5,8 @@ Changelog
 1.10.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Use "now" as default of "freeze".
+  [jone]
 
 
 1.10.0 (2015-05-18)
